# registration-system-plugin

./: .talismanrc  README.md  __init__.py  pyproject.toml
admin/: Page.jsx
locales/: en.json  pt-BR.json  pt-PT.json
models/: __init__.py  activity_registration.py
router/: __init__.py  activity_registration.py
schemas/: __init__.py  activity_registration.py
services/: __init__.py  activity_registration_service.py
utils/: user.py
