[project]
name = "registration-system-plugin"
version = "0.1.0"
dependencies = []

[tool.coffeebreak]
identifier = "registration-system-plugin"
name = "Registration System Plugin"
description = "Activity registration metadata and slot management plugin."
config_page = true

[tool.coffeebreak.admin_page]
file = "admin/Page.jsx"
route_slug = "registration-system-plugin"
export_name = "default"
